# ABRec-fuxian

./: README.md  pyproject.toml  requirements.txt
configs/: abrec.yaml  new_data_baby.yaml
scripts/: train_abrec.py  train_and_infer_new_data.py  train_mm_encoder.py
src/abrec/: __init__.py  config.py  losses.py
src/abrec/models/: __init__.py  abrec.py  mm_item_encoder.py
tests/: test_abrec_shapes.py
